# datareal-crawler

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  requirements.txt  serverless.yml
functions/: crawl.py  crawls.py  daily.py  dispatcher.py  download_images.py  finisher.py  online_checker.py  priceverifier.py  scrape.py  urls.py  verifier.py
lib/: dispatcher.py  event.py  html.py  libcrypto.so.1.1  url.py  utils.py  xpath.py
lib/compressor/: __init__.py  main.py
lib/database/: __init__.py  utils.py
lib/exceptions/: __init__.py  exceptions.py
lib/fake_headers/: __init__.py  errors.py  fake.py  utils.py
lib/html/: __init__.py  html.py
lib/images/: __init__.py  process.py
lib/models/: crawl.py  crawls.py  dispatcher.py  header.py  request.py
lib/models/database/: __init__.py  database.py  utils.py
lib/request/: __init__.py  req.py
lib/sanitizer/: __init__.py  cleaners.py  etl.py  sanitizer.py  settings.py
lib/storage/: __init__.py  utils.py
lib/url/: __init__.py
lib/xpath/: __init__.py
scripts/: build_rust.sh
src/request/: Cargo.toml
src/request/src/: lib.rs
